--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -46,10 +46,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2 # TODO: check if there is a v3
       - name: Show which option was selected
-        run: |
-          CONFIG='${{ fromJSON(needs.load-config.outputs.config) }}'
-          ENVIRONMENTS=$(echo $CONFIG | jq -r '.environment_names')
-          echo "The options are: $ENVIRONMENTS"
+        run: echo "The option selected was ${{ needs.load-config.outputs.environment_names }}"
+
 
 
   # set-environments:
