Check if matrix is correctly transferred

--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -42,13 +42,13 @@ jobs:
     name: Output selected option
     needs: load-config
     runs-on: ubuntu-20.04
-    strategy:
-      matrix: ${{fromJson(needs.load-config.outputs.deployment_matrix)}}
+    # strategy:
+    #   matrix: ${{fromJson(needs.load-config.outputs.deployment_matrix)}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2 # TODO: check if there is a v3
       - name: Show the matrix
-        run: echo "The name is ${{ matrix.environment_name }}, type is ${{ matrix.environment_type }}"
+        run: echo "The matrix is ${{ needs.load-config.outputs.deployment_matrix }}"
 
 
 
