--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -12,6 +12,8 @@ Parameters:
     Description: The environment for which the buckets need to be created.
   DomainName:
     Type: String
+  ReplyEmail:
+    Type: String
 
 Outputs:
   UserPoolId:
@@ -87,7 +89,7 @@ Resources:
         # To customize the From field, we have to provide the ARN of an SES account
         # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-emailconfiguration.html
         EmailSendingAccount: COGNITO_DEFAULT
-        ReplyToEmailAddress: "alex_pickering@hms.harvard.edu"
+        ReplyToEmailAddress: !Sub ${ReplyEmail}
       EnabledMfas:
         - SMS_MFA
         - SOFTWARE_TOKEN_MFA
