--- a/deployment-config.json
+++ b/deployment-config.json
@@ -19,7 +19,7 @@
             "alabs": [
                 "production"
             ],
-            "biomage": [
+            "Biomage": [
                 "production",
                 "staging"
             ]
