Fix variable names and pass environment type

--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -37,7 +37,8 @@ jobs:
     uses: biomage-org/iac/.github/workflows/load-config.yaml@hms-merge
     # uses: ./.github/workflows/load-config.yaml ## USE THIS WHEN MERGING IN MASTER
     with:
-      environment: ${{ github.event.inputs.environment_name }}
+      environment-name: ${{ github.event.inputs.environment_name }}
+      environment-type: ${{ github.event.inputs.environment_type }}
 
   set-environments:
     name: Set up environment name and environment type for action run
@@ -356,7 +357,7 @@ jobs:
           template: ${{ matrix.template }}
           no-fail-on-empty-changeset: "1"
           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
-          
+
       # The following steps are only necessary for IAM Service Account roles.
       - id: get-oidc
         if: ${{ contains(matrix.template, 'irsa-') }}
