--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -41,7 +41,8 @@ jobs:
     uses: biomage-org/iac/.github/workflows/load-config.yaml@hms-merge
     # uses: ./.github/workflows/load-config.yaml ## USE THIS WHEN MERGING IN MASTER
     with:
-      environment: ${{ github.event.inputs.environment_name }}
+      environment-name: ${{ github.event.inputs.environment_name }}
+      environment-type: ${{ github.event.inputs.environment_type }}
   set-environments:
     name: Set up environment name and environment type for action run
     runs-on: ubuntu-20.04
