--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -89,7 +89,7 @@ jobs:
   generate-deployment-matrix:
     name: Generate deployment matrix based on the config files
     needs: setup
-    if: ${{ github.event.inputs.environment-name != '' }}
+    if: ${{ github.event.inputs.environment_name != '' }}
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout repository
