--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -101,7 +101,7 @@ jobs:
           valid_options_json=$(echo '${{ needs.setup.outputs.environment_names }}' | jq '. += ["all"]')
           valid_options=($(echo $valid_options_json | jq -r '.[]'))
 
-          if [[ " ${valid_options[@]} " =~ " ${{ github.event.inputs.environment }} " ]]; then
+          if [[ " ${valid_options[@]} " =~ " ${{ github.event.inputs.environment_name }} " ]]; then
             echo "Valid option selected"
             exit 0
           else
