--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -127,8 +127,7 @@ jobs:
 
           DEPLOYMENT_MATRIX=$(echo $CONFIG_FILE | jq -c --arg org "${{ github.repository_owner }}" --arg env_name "$ENV_NAME" --arg env_type "$ENV_TYPE" '
           [
-            to_entries[] |
-            .[$org].value.deployment_environments |
+            .[$org].deployment_environments |
             to_entries[] |
             select((.key|test($env_name)) and (.value[]|test($env_type))) |
             {
