--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -19,7 +19,9 @@ jobs:
   load-config:
     uses: biomage-org/iac/.github/workflows/load-config.yaml@hms-merge
     # uses: ./.github/workflows/load-config.yaml ## USE THIS WHEN MERGING IN MASTER
-
+    with:
+      environment-name: "all"
+      environment-type: "staging and production"
   check-secrets:
     name: Check if secrets are defined
     runs-on: ubuntu-20.04
@@ -103,8 +105,8 @@ jobs:
         name: Deploy AWS Step Function (state machine) roles
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }}"
-          name: "biomage-state-machine-role-${{ matrix.environment-type }}"
+          parameter-overrides: "Environment=${{ matrix.environment.type }}"
+          name: "biomage-state-machine-role-${{ matrix.environment.type }}"
           template: 'infra/cf-state-machine-role.yaml'
           capabilities: 'CAPABILITY_IAM,CAPABILITY_NAMED_IAM'
           no-fail-on-empty-changeset: "1"
@@ -137,7 +139,7 @@ jobs:
       - id: update-identitymapping-admin
         name: Add cluster admin rights to everyone on the admin list.
         run: |-
-          echo "Reading cluster rights from file: infra/config/cluster/${{matrix.environment-name}}/cluster-admins-$CLUSTER_ENV"
+          echo "Reading cluster rights from file: infra/config/cluster/${{matrix.environment.name}}/cluster-admins-$CLUSTER_ENV"
           while IFS= read -r user
           do
             echo "Adding cluster admin rights to $user"
@@ -146,4 +148,4 @@ jobs:
               --arn arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:user/$user \
               --group system:masters \
               --username $user
-          done < "infra/config/cluster/${{matrix.environment-name}}/cluster-admins-$CLUSTER_ENV"
+          done < "infra/config/cluster/${{matrix.environment.name}}/cluster-admins-$CLUSTER_ENV"
